--- a/hosts/sora/users/ggg/configs/settings.json
+++ b/hosts/sora/users/ggg/configs/settings.json
@@ -70,10 +70,21 @@
     "editor.fontLigatures": true,
     "editor.fontFamily": "'Cascadia Code'",
 
+    "csharp.inlayHints.parameters.enabled": true,
+    "csharp.inlayHints.parameters.forIndexerParameters": true,
+    "csharp.inlayHints.parameters.forObjectCreationParameters": true,
+    "csharp.inlayHints.parameters.forOtherParameters": true,
+    "csharp.inlayHints.parameters.suppressForParametersThatDifferOnlyBySuffix": true,
+    "csharp.inlayHints.parameters.suppressForParametersThatMatchArgumentName": true,
+    "csharp.inlayHints.parameters.suppressForParametersThatMatchMethodIntent": true,
+    "csharp.inlayHints.types.enabled": true,
+    "csharp.inlayHints.types.forImplicitObjectCreation": true,
+    "csharp.inlayHints.types.forImplicitVariableTypes": true,
+    "csharp.inlayHints.types.forLambdaParameterTypes": true,
     "csharp.semanticHighlighting.enabled": true,
     "omnisharp.enableAsyncCompletion": true,
     "omnisharp.enableImportCompletion": true,
     "omnisharp.enableRoslynAnalyzers": true,
     "omnisharp.organizeImportsOnFormat": true,
-    "omnisharp.sdk.includePrereleases": true
+    "omnisharp.useModernNet": true
 }
