--- a/hosts/sora/users/ggg/configs/settings.json
+++ b/hosts/sora/users/ggg/configs/settings.json
@@ -83,6 +83,7 @@
     "csharp.inlayHints.types.forLambdaParameterTypes": true,
     "csharp.semanticHighlighting.enabled": true,
     "omnisharp.enableAsyncCompletion": true,
+    "omnisharp.enableDecompilationSupport": true,
     "omnisharp.enableImportCompletion": true,
     "omnisharp.enableRoslynAnalyzers": true,
     "omnisharp.organizeImportsOnFormat": true,
