Fix VSCode terminal.

--- a/hosts/sora/users/ggg/configs/settings.json
+++ b/hosts/sora/users/ggg/configs/settings.json
@@ -1,91 +1,93 @@
 {
-    "editor.wordWrap": "on",
-    "editor.wrappingIndent": "same",
-    "editor.mouseWheelScrollSensitivity": 1.5,
-    "editor.renderWhitespace": "boundary",
-    "editor.renderControlCharacters": true,
-    "workbench.iconTheme": "material-icon-theme",
-    "window.title": "${dirty}${activeEditorMedium}${separator}${rootName}",
-    "files.eol": "\n",
-    "files.trimTrailingWhitespace": true,
-    "files.autoSave": "onWindowChange",
-    "explorer.autoReveal": false,
-    "debug.inlineValues": true,
-    "html.format.indentInnerHtml": true,
-    "html.format.indentHandlebars": true,
-    "html.format.extraLiners": "",
-    "files.associations": {
-    },
-    "extensions.ignoreRecommendations": false,
-
-    "editor.minimap.enabled": false,
-
-    "typescript.format.enable": true,
-    "typescript.format.insertSpaceAfterCommaDelimiter": true,
-    "typescript.check.npmIsInstalled": true,
-    "typescript.format.insertSpaceAfterSemicolonInForStatements": true,
-    "typescript.format.insertSpaceAfterTypeAssertion": true,
-    "typescript.format.insertSpaceBeforeAndAfterBinaryOperators": true,
-    "typescript.format.insertSpaceAfterOpeningAndBeforeClosingJsxExpressionBraces": false,
-
-    "typescript.implementationsCodeLens.enabled": true,
-    "typescript.referencesCodeLens.enabled": true,
-
-    "editor.smoothScrolling": true,
-    "editor.suggestSelection": "first",
-    "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
-    "git.autofetch": true,
-    "diffEditor.ignoreTrimWhitespace": false,
-    "git.confirmSync": false,
-    "typescript.updateImportsOnFileMove.enabled": "always",
-    "editor.largeFileOptimizations": false,
-    "editor.formatOnType": true,
-
-    "terraform.languageServer": {
-        "external": true,
-        "pathToBinary": "",
-        "args": [
-            "serve"
-        ],
-        "trace.server": "off"
-    },
-    "redhat.telemetry.enabled": false,
-
-    "[nix]": {
-        "editor.detectIndentation": false,
-        "editor.insertSpaces": true,
-        "editor.tabSize": 2
-    },
-    "notebook.lineNumbers": "on",
-    "git.enableSmartCommit": true,
-    "files.exclude": {
-        "**/.classpath": true,
-        "**/.project": true,
-        "**/.settings": true,
-        "**/.factorypath": true
-    },
-    "editor.maxTokenizationLineLength": 50000,
-    "terminal.integrated.fontFamily": "monospace",
-    "nix.enableLanguageServer": true,
-    "editor.fontLigatures": true,
-    "editor.fontFamily": "'Cascadia Code'",
-
-    "csharp.inlayHints.parameters.enabled": true,
-    "csharp.inlayHints.parameters.forIndexerParameters": true,
-    "csharp.inlayHints.parameters.forObjectCreationParameters": true,
-    "csharp.inlayHints.parameters.forOtherParameters": true,
-    "csharp.inlayHints.parameters.suppressForParametersThatDifferOnlyBySuffix": true,
-    "csharp.inlayHints.parameters.suppressForParametersThatMatchArgumentName": true,
-    "csharp.inlayHints.parameters.suppressForParametersThatMatchMethodIntent": true,
-    "csharp.inlayHints.types.enabled": true,
-    "csharp.inlayHints.types.forImplicitObjectCreation": true,
-    "csharp.inlayHints.types.forImplicitVariableTypes": true,
-    "csharp.inlayHints.types.forLambdaParameterTypes": true,
-    "csharp.semanticHighlighting.enabled": true,
-    "omnisharp.enableAsyncCompletion": true,
-    "omnisharp.enableDecompilationSupport": true,
-    "omnisharp.enableImportCompletion": true,
-    "omnisharp.enableRoslynAnalyzers": true,
-    "omnisharp.organizeImportsOnFormat": true,
-    "omnisharp.useModernNet": true
+  "[nix]": {
+    "editor.detectIndentation": false,
+    "editor.insertSpaces": true,
+    "editor.tabSize": 2
+  },
+  "csharp.inlayHints.parameters.enabled": true,
+  "csharp.inlayHints.parameters.forIndexerParameters": true,
+  "csharp.inlayHints.parameters.forObjectCreationParameters": true,
+  "csharp.inlayHints.parameters.forOtherParameters": true,
+  "csharp.inlayHints.parameters.suppressForParametersThatDifferOnlyBySuffix": true,
+  "csharp.inlayHints.parameters.suppressForParametersThatMatchArgumentName": true,
+  "csharp.inlayHints.parameters.suppressForParametersThatMatchMethodIntent": true,
+  "csharp.inlayHints.types.enabled": true,
+  "csharp.inlayHints.types.forImplicitObjectCreation": true,
+  "csharp.inlayHints.types.forImplicitVariableTypes": true,
+  "csharp.inlayHints.types.forLambdaParameterTypes": true,
+  "csharp.semanticHighlighting.enabled": true,
+  "debug.inlineValues": "on",
+  "diffEditor.ignoreTrimWhitespace": false,
+  "editor.experimental.stickyScroll.enabled": true,
+  "editor.fontFamily": "'Cascadia Code'",
+  "editor.fontLigatures": true,
+  "editor.formatOnType": true,
+  "editor.largeFileOptimizations": false,
+  "editor.maxTokenizationLineLength": 50000,
+  "editor.minimap.enabled": false,
+  "editor.mouseWheelScrollSensitivity": 1.5,
+  "editor.renderControlCharacters": true,
+  "editor.renderWhitespace": "boundary",
+  "editor.smoothScrolling": true,
+  "editor.suggestSelection": "first",
+  "editor.wordWrap": "on",
+  "editor.wrappingIndent": "same",
+  "explorer.autoReveal": false,
+  "extensions.autoCheckUpdates": false,
+  "extensions.autoUpdate": false,
+  "extensions.ignoreRecommendations": false,
+  "files.associations": {},
+  "files.autoSave": "onWindowChange",
+  "files.eol": "\n",
+  "files.exclude": {
+    "**/.classpath": true,
+    "**/.factorypath": true,
+    "**/.project": true,
+    "**/.settings": true
+  },
+  "files.trimTrailingWhitespace": true,
+  "git.autofetch": true,
+  "git.confirmSync": false,
+  "git.enableSmartCommit": true,
+  "html.format.extraLiners": "",
+  "html.format.indentHandlebars": true,
+  "html.format.indentInnerHtml": true,
+  "nix.enableLanguageServer": true,
+  "notebook.lineNumbers": "on",
+  "omnisharp.enableAsyncCompletion": true,
+  "omnisharp.enableDecompilationSupport": true,
+  "omnisharp.enableImportCompletion": true,
+  "omnisharp.enableRoslynAnalyzers": true,
+  "omnisharp.organizeImportsOnFormat": true,
+  "omnisharp.useModernNet": true,
+  "redhat.telemetry.enabled": false,
+  "terminal.integrated.defaultProfile.linux": "zsh",
+  "terminal.integrated.fontFamily": "'Cascadia Mono PL'",
+  "terminal.integrated.rightClickBehavior": "copyPaste",
+  "terminal.integrated.shellIntegration.decorationsEnabled": "never",
+  "terminal.integrated.shellIntegration.enabled": false,
+  "terraform.languageServer": {
+    "args": [
+      "serve"
+    ],
+    "external": true,
+    "pathToBinary": "",
+    "trace.server": "off"
+  },
+  "typescript.check.npmIsInstalled": true,
+  "typescript.format.enable": true,
+  "typescript.format.insertSpaceAfterCommaDelimiter": true,
+  "typescript.format.insertSpaceAfterOpeningAndBeforeClosingJsxExpressionBraces": false,
+  "typescript.format.insertSpaceAfterSemicolonInForStatements": true,
+  "typescript.format.insertSpaceAfterTypeAssertion": true,
+  "typescript.format.insertSpaceBeforeAndAfterBinaryOperators": true,
+  "typescript.implementationsCodeLens.enabled": true,
+  "typescript.referencesCodeLens.enabled": true,
+  "typescript.updateImportsOnFileMove.enabled": "always",
+  "update.mode": "none",
+  "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
+  "window.title": "${dirty}${activeEditorMedium}${separator}${rootName}",
+  "window.titleBarStyle": "custom",
+  "workbench.iconTheme": "material-icon-theme",
+  "terminal.external.linuxExec": "zsh"
 }
