Update vscode git settings.

--- a/hosts/sora/users/ggg/configs/settings.json
+++ b/hosts/sora/users/ggg/configs/settings.json
@@ -46,9 +46,15 @@
     "**/.settings": true
   },
   "files.trimTrailingWhitespace": true,
+  "git.allowForcePush": true,
   "git.autofetch": true,
+  "git.closeDiffOnOperation": true,
   "git.confirmSync": false,
   "git.enableSmartCommit": true,
+  "git.fetchOnPull": true,
+  "git.supportCancellation": true,
+  "git.terminalGitEditor": true,
+  "git.useCommitInputAsStashMessage": true,
   "html.format.extraLiners": "",
   "html.format.indentHandlebars": true,
   "html.format.indentInnerHtml": true,
