--- a/hosts/sora/users/ggg/configs/settings.json
+++ b/hosts/sora/users/ggg/configs/settings.json
@@ -4,20 +4,27 @@
     "editor.insertSpaces": true,
     "editor.tabSize": 2
   },
-  "csharp.inlayHints.parameters.enabled": true,
-  "csharp.inlayHints.parameters.forIndexerParameters": true,
-  "csharp.inlayHints.parameters.forObjectCreationParameters": true,
-  "csharp.inlayHints.parameters.forOtherParameters": true,
-  "csharp.inlayHints.parameters.suppressForParametersThatDifferOnlyBySuffix": true,
-  "csharp.inlayHints.parameters.suppressForParametersThatMatchArgumentName": true,
-  "csharp.inlayHints.parameters.suppressForParametersThatMatchMethodIntent": true,
-  "csharp.inlayHints.types.enabled": true,
-  "csharp.inlayHints.types.forImplicitObjectCreation": true,
-  "csharp.inlayHints.types.forImplicitVariableTypes": true,
-  "csharp.inlayHints.types.forLambdaParameterTypes": true,
+  "csharp.inlayHints.enableInlayHintsForImplicitObjectCreation": true,
+  "csharp.inlayHints.enableInlayHintsForImplicitVariableTypes": true,
+  "csharp.inlayHints.enableInlayHintsForLambdaParameterTypes": true,
+  "csharp.inlayHints.enableInlayHintsForTypes": true,
   "csharp.semanticHighlighting.enabled": true,
   "debug.inlineValues": "on",
   "diffEditor.ignoreTrimWhitespace": false,
+  "dotnet.completion.provideRegexCompletions": true,
+  "dotnet.completion.showCompletionItemsFromUnimportedNamespaces": true,
+  "dotnet.completion.showNameCompletionSuggestions": true,
+  "dotnet.implementType.propertyGenerationBehavior": "preferAutoProperties",
+  "dotnet.inlayHints.enableInlayHintsForIndexerParameters": true,
+  "dotnet.inlayHints.enableInlayHintsForLiteralParameters": true,
+  "dotnet.inlayHints.enableInlayHintsForObjectCreationParameters": true,
+  "dotnet.inlayHints.enableInlayHintsForOtherParameters": true,
+  "dotnet.inlayHints.enableInlayHintsForParameters": true,
+  "dotnet.inlayHints.suppressInlayHintsForParametersThatDifferOnlyBySuffix": true,
+  "dotnet.inlayHints.suppressInlayHintsForParametersThatMatchArgumentName": true,
+  "dotnet.inlayHints.suppressInlayHintsForParametersThatMatchMethodIntent": true,
+  "dotnet.navigation.navigateToDecompiledSources": true,
+  "dotnet.quickInfo.showRemarksInQuickInfo": true,
   "editor.fontFamily": "'Cascadia Code'",
   "editor.fontLigatures": true,
   "editor.formatOnType": true,
@@ -60,7 +67,6 @@
   "notebook.lineNumbers": "on",
   "omnisharp.enableAsyncCompletion": true,
   "omnisharp.enableDecompilationSupport": true,
-  "omnisharp.enableImportCompletion": true,
   "omnisharp.enableRoslynAnalyzers": true,
   "omnisharp.organizeImportsOnFormat": true,
   "omnisharp.useModernNet": true,
