Update vscode configs.

--- a/hosts/sora/users/ggg/vscode/settings.json
+++ b/hosts/sora/users/ggg/vscode/settings.json
@@ -9,11 +9,20 @@
   "csharp.inlayHints.enableInlayHintsForLambdaParameterTypes": true,
   "csharp.inlayHints.enableInlayHintsForTypes": true,
   "csharp.semanticHighlighting.enabled": true,
+  "csharp.suppressHiddenDiagnostics": false,
   "debug.inlineValues": "on",
   "diffEditor.ignoreTrimWhitespace": false,
+  "dotnet.automaticallyCreateSolutionInWorkspace": false,
+  "dotnet.backgroundAnalysis.analyzerDiagnosticsScope": "fullSolution",
+  "dotnet.backgroundAnalysis.compilerDiagnosticsScope": "fullSolution",
+  "dotnet.codeLens.enableReferencesCodeLens": true,
+  "dotnet.codeLens.enableTestsCodeLens": true,
   "dotnet.completion.provideRegexCompletions": true,
   "dotnet.completion.showCompletionItemsFromUnimportedNamespaces": true,
   "dotnet.completion.showNameCompletionSuggestions": true,
+  "dotnet.highlighting.highlightRelatedJsonComponents": true,
+  "dotnet.highlighting.highlightRelatedRegexComponents": true,
+  "dotnet.implementType.insertionBehavior": "withOtherMembersOfTheSameKind",
   "dotnet.implementType.propertyGenerationBehavior": "preferAutoProperties",
   "dotnet.inlayHints.enableInlayHintsForIndexerParameters": true,
   "dotnet.inlayHints.enableInlayHintsForLiteralParameters": true,
@@ -24,8 +33,9 @@
   "dotnet.inlayHints.suppressInlayHintsForParametersThatMatchArgumentName": true,
   "dotnet.inlayHints.suppressInlayHintsForParametersThatMatchMethodIntent": true,
   "dotnet.navigation.navigateToDecompiledSources": true,
-  "dotnet.preferRuntimeFromSDK": true,
+  "dotnet.projects.enableAutomaticRestore": true,
   "dotnet.quickInfo.showRemarksInQuickInfo": true,
+  "dotnet.symbolSearch.searchReferenceAssemblies": true,
   "editor.fontFamily": "'Cascadia Code'",
   "editor.fontLigatures": true,
   "editor.formatOnType": true,
@@ -68,7 +78,6 @@
   "notebook.lineNumbers": "on",
   "omnisharp.enableAsyncCompletion": true,
   "omnisharp.enableDecompilationSupport": true,
-  "omnisharp.enableRoslynAnalyzers": true,
   "omnisharp.organizeImportsOnFormat": true,
   "omnisharp.useModernNet": true,
   "redhat.telemetry.enabled": false,
@@ -78,14 +87,6 @@
   "terminal.integrated.rightClickBehavior": "copyPaste",
   "terminal.integrated.shellIntegration.decorationsEnabled": "never",
   "terminal.integrated.shellIntegration.enabled": false,
-  "terraform.languageServer": {
-    "args": [
-      "serve"
-    ],
-    "external": true,
-    "pathToBinary": "",
-    "trace.server": "off"
-  },
   "typescript.check.npmIsInstalled": true,
   "typescript.format.enable": true,
   "typescript.format.insertSpaceAfterCommaDelimiter": true,
@@ -96,7 +97,6 @@
   "typescript.implementationsCodeLens.enabled": true,
   "typescript.referencesCodeLens.enabled": true,
   "typescript.updateImportsOnFileMove.enabled": "always",
-  "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
   "window.title": "${dirty}${activeEditorMedium}${separator}${rootName}",
   "window.titleBarStyle": "custom",
   "workbench.colorCustomizations": {
