sora.vscode: update settings.

--- a/hosts/sora/users/ggg/vscode/settings.json
+++ b/hosts/sora/users/ggg/vscode/settings.json
@@ -1,28 +1,20 @@
 {
+  "$schema": "vscode://schemas/settings/user",
   "[nix]": {
-    "editor.detectIndentation": false,
     "editor.insertSpaces": true,
     "editor.tabSize": 2
   },
+  "csharp.experimental.debug.hotReload": true,
   "csharp.inlayHints.enableInlayHintsForImplicitObjectCreation": true,
   "csharp.inlayHints.enableInlayHintsForImplicitVariableTypes": true,
   "csharp.inlayHints.enableInlayHintsForLambdaParameterTypes": true,
   "csharp.inlayHints.enableInlayHintsForTypes": true,
-  "csharp.semanticHighlighting.enabled": true,
+  "csharp.preview.improvedLaunchExperience": true,
   "csharp.suppressHiddenDiagnostics": false,
-  "debug.inlineValues": "on",
   "diffEditor.ignoreTrimWhitespace": false,
   "dotnet.automaticallyCreateSolutionInWorkspace": false,
   "dotnet.backgroundAnalysis.analyzerDiagnosticsScope": "fullSolution",
   "dotnet.backgroundAnalysis.compilerDiagnosticsScope": "fullSolution",
-  "dotnet.codeLens.enableReferencesCodeLens": true,
-  "dotnet.codeLens.enableTestsCodeLens": true,
-  "dotnet.completion.provideRegexCompletions": true,
-  "dotnet.completion.showCompletionItemsFromUnimportedNamespaces": true,
-  "dotnet.completion.showNameCompletionSuggestions": true,
-  "dotnet.highlighting.highlightRelatedJsonComponents": true,
-  "dotnet.highlighting.highlightRelatedRegexComponents": true,
-  "dotnet.implementType.insertionBehavior": "withOtherMembersOfTheSameKind",
   "dotnet.implementType.propertyGenerationBehavior": "preferAutoProperties",
   "dotnet.inlayHints.enableInlayHintsForIndexerParameters": true,
   "dotnet.inlayHints.enableInlayHintsForLiteralParameters": true,
@@ -32,35 +24,57 @@
   "dotnet.inlayHints.suppressInlayHintsForParametersThatDifferOnlyBySuffix": true,
   "dotnet.inlayHints.suppressInlayHintsForParametersThatMatchArgumentName": true,
   "dotnet.inlayHints.suppressInlayHintsForParametersThatMatchMethodIntent": true,
-  "dotnet.navigation.navigateToDecompiledSources": true,
-  "dotnet.projects.enableAutomaticRestore": true,
-  "dotnet.quickInfo.showRemarksInQuickInfo": true,
-  "dotnet.symbolSearch.searchReferenceAssemblies": true,
+  "dotnetAcquisitionExtension.enableTelemetry": false,
+  "editor.acceptSuggestionOnCommitCharacter": false,
+  "editor.detectIndentation": false,
   "editor.fontFamily": "'Cascadia Code'",
   "editor.fontLigatures": true,
+  "editor.formatOnPaste": true,
+  "editor.formatOnSave": true,
+  "editor.formatOnSaveMode": "modificationsIfAvailable",
   "editor.formatOnType": true,
+  "editor.guides.bracketPairs": "active",
   "editor.largeFileOptimizations": false,
+  "editor.linkedEditing": true,
   "editor.maxTokenizationLineLength": 50000,
   "editor.minimap.enabled": false,
   "editor.mouseWheelScrollSensitivity": 1.5,
-  "editor.renderControlCharacters": true,
   "editor.renderWhitespace": "boundary",
   "editor.smoothScrolling": true,
-  "editor.stickyScroll.enabled": true,
-  "editor.suggestSelection": "first",
+  "editor.snippetSuggestions": "bottom",
+  "editor.suggest.preview": true,
+  "editor.suggestSelection": "recentlyUsedByPrefix",
+  "editor.wordBasedSuggestions": "off",
   "editor.wordWrap": "on",
   "editor.wrappingIndent": "same",
-  "explorer.autoReveal": false,
+  "eslint.useESLintClass": true,
+  "explorer.autoReveal": "focusNoScroll",
+  "explorer.confirmDelete": false,
+  "explorer.confirmPasteNative": false,
+  "explorer.copyRelativePathSeparator": "/",
+  "explorer.fileNesting.enabled": true,
+  "explorer.fileNesting.patterns": {
+    "*.js": "${capture}.js.map, ${capture}.min.js, ${capture}.d.ts",
+    "*.jsx": "${capture}.js",
+    "*.ts": "${capture}.js",
+    "*.tsx": "${capture}.ts",
+    "Cargo.toml": "Cargo.lock",
+    "package.json": "package-lock.json, yarn.lock, pnpm-lock.yaml, bun.lockb",
+    "settings.json": "settings.*.json",
+    "tsconfig.json": "tsconfig.*.json"
+  },
   "extensions.ignoreRecommendations": false,
-  "files.associations": {},
+  "files.autoGuessEncoding": true,
   "files.autoSave": "onWindowChange",
-  "files.eol": "\n",
   "files.exclude": {
     "**/.classpath": true,
     "**/.factorypath": true,
     "**/.project": true,
     "**/.settings": true
   },
+  "files.insertFinalNewline": true,
+  "files.readonlyFromPermissions": true,
+  "files.simpleDialog.enable": true,
   "files.trimTrailingWhitespace": true,
   "git.allowForcePush": true,
   "git.autofetch": true,
@@ -68,9 +82,11 @@
   "git.confirmSync": false,
   "git.enableSmartCommit": true,
   "git.fetchOnPull": true,
-  "git.supportCancellation": true,
+  "git.pullBeforeCheckout": true,
+  "git.rebaseWhenSync": true,
   "git.terminalGitEditor": true,
   "git.useCommitInputAsStashMessage": true,
+  "gitlens.telemetry.enabled": false,
   "html.format.extraLiners": "",
   "html.format.indentHandlebars": true,
   "html.format.indentInnerHtml": true,
@@ -79,21 +95,16 @@
   "omnisharp.enableAsyncCompletion": true,
   "omnisharp.enableDecompilationSupport": true,
   "omnisharp.organizeImportsOnFormat": true,
-  "omnisharp.useModernNet": true,
   "redhat.telemetry.enabled": false,
+  "scm.defaultViewMode": "tree",
+  "search.defaultViewMode": "tree",
   "terminal.external.linuxExec": "zsh",
   "terminal.integrated.defaultProfile.linux": "zsh",
   "terminal.integrated.fontFamily": "'Cascadia Code'",
   "terminal.integrated.rightClickBehavior": "copyPaste",
-  "terminal.integrated.shellIntegration.decorationsEnabled": "never",
-  "terminal.integrated.shellIntegration.enabled": false,
-  "typescript.check.npmIsInstalled": true,
-  "typescript.format.enable": true,
-  "typescript.format.insertSpaceAfterCommaDelimiter": true,
-  "typescript.format.insertSpaceAfterOpeningAndBeforeClosingJsxExpressionBraces": false,
-  "typescript.format.insertSpaceAfterSemicolonInForStatements": true,
+  "terminal.integrated.scrollback": 1000000,
+  "terminal.integrated.stickyScroll.enabled": true,
   "typescript.format.insertSpaceAfterTypeAssertion": true,
-  "typescript.format.insertSpaceBeforeAndAfterBinaryOperators": true,
   "typescript.implementationsCodeLens.enabled": true,
   "typescript.referencesCodeLens.enabled": true,
   "typescript.updateImportsOnFileMove.enabled": "always",
@@ -107,5 +118,6 @@
     "editorInlayHint.typeBackground": "#ffffff00",
     "editorInlayHint.typeForeground": "#f8f8f87e"
   },
-  "workbench.iconTheme": "material-icon-theme"
+  "workbench.iconTheme": "material-icon-theme",
+  "workbench.list.smoothScrolling": true
 }
